Test code cleanup based on sonar scan